# mini-KMS

./: .gitignore  README.md
backend/: Cargo.toml
backend/docs/: api.md
backend/src/: main.rs
backend/src/entity/: audit_logs.rs  devices.rs  keypacks.rs  mod.rs  users.rs
backend/src/error/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: audit_log.rs  auth.rs  common.rs  device.rs  keypack.rs  mod.rs  system.rs  user.rs
backend/src/repository/: audit_log_repository.rs  device_repository.rs  keypack_repository.rs  mod.rs  user_repository.rs
backend/src/routes/: audit_logs.rs  auth.rs  devices.rs  keypacks.rs  mod.rs  system.rs  users.rs
backend/src/service/: audit_service.rs  auth_service.rs  device_service.rs  keypack_service.rs  mod.rs  system_service.rs  user_service.rs
backend/src/state/: app_state.rs
database/: README.md  schema.sql  seed.sql
database/migrations/: 001_init.sql
docs/: api.md  schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  index.css  index.tsx
frontend/src/components/: AppShell.tsx  ProtectedRoute.tsx  StatCard.tsx  TableCard.tsx
frontend/src/lib/api/: auditLogs.ts  auth.ts  client.ts  devices.ts  keypacks.ts  kms.ts  system.ts  users.ts
frontend/src/lib/models/: index.ts
frontend/src/lib/storage/: auth.ts  session.ts
frontend/src/routes/: App.tsx  AuditLogsPage.tsx  DashboardPage.tsx  DeviceDetailPage.tsx  DevicesPage.tsx  KeypacksPage.tsx  LoginPage.tsx  UsersPage.tsx
frontend/src/styles/: index.css
(+3 files in other folders)
